# array_of_actions

./: CMakeLists.txt  license.md
array_of_actions_with_data/: CMakeLists.txt
array_of_actions_with_data/source/: main.cpp
array_of_pure_actions/: CMakeLists.txt
array_of_pure_actions/source/: main.cpp
